--- a/meteo/package.json
+++ b/meteo/package.json
@@ -8,11 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "apexcharts": "^3.49.1",
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "file-saver": "^2.0.5",
     "vue": "^3.2.13",
-    "vue-apexcharts": "^1.6.2",
     "vue-chart-3": "^3.1.8",
     "vue-router": "^4.0.3",
     "vue3-apexcharts": "^1.5.3",
